 - Add signatureParams()
 - Add signature(2) to extract ECDSA signature components.
 - Fix and extend registerOID, add tests.
 - Add examples/ directory with sample code
 - Verify signature of CSRs in new() by default.  Add checkSignature().
 - Optionally allow invalid base64 character in PEM data.
 - Allow new() from filename and options from hashref.

1.7_01
 - Address CPANTS failures due to bugs in old versions of Crypt::PK::ECC
 - Add explicit version dependency for CryptX, the parent distribution.
 - For insurance, add explicit version requirements for the other modules we depend on.
 - Add getAPIversion
 - Make stringify use an overloadable method so it can be extended if subclassed.
 - Correctly parse DER for expected length when removing padding.

1.8
 - When returning PEM, ensure max line width of 64 to satisfy RFC 7468, not 76 of MIME.
 - Fix test failures on some editions of 5.8.8 due to Perl bug 39185.  (Tripped in test, not module.)

1.8001
 - Makefile.pl: Diagnose old OpenSSL versions that fail signature verification and discard automated tests in that case.
 - Print full OpenSSL configuration during automated testing.
 - Require CryptX with version fix.
 - Silence test warning if openssl command is missing.
 - No changes to functional code.

1.8002
 - Cosmetic: wrap long form OpenSSL config in test
 - Make RSA, DSA and ECC support optional.  Warn during install none are present or any don't work.
 - Signature verification requires the corresponding module, as does decoding ECC public keys.
 - subjectPublicKeyParams and checkSignature set error() for unsupported key type or hash.
 - Clean up carp/croak, especially where crept into evals.
 - Provide instance method for error.
 - Fix stringify's interactions with API v0.
 - Add binaryMode and PEMonly options to provide finer grained control of formats

1.8002_01
 - Filter OpenSSL's 'WARNING: can't open config file' messages.


__END__